--- a/generic.html
+++ b/generic.html
@@ -38,7 +38,7 @@
 										<h1>A Day in the Life of a 24 Year Old Strategy Consultant</h1>
 									</header>
 
-									<span class="image main"><img src=“Photos/pic11.jpg“ alt="" /></span>
+									<span class="image main"><img src=“images/pic11.jpg“ alt="" /></span>
 
 									<p>He wakes up at 4:30AM every morning. and starts his morning with a jog 4 miles around a lake near his house.</p>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
