--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Welcome to Thomas Tran’s Website</title>
+		<title>Strategy Consulting by TT</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
+									<a href="index.html" class="logo"><strong>Strategy Consulting Lifestyle</strong> by TT</a>
 									<ul class="icons">
 										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -36,8 +36,7 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hi, My Name is Thomas<br />
-											by HTML5 UP</h1>
+											<h1>Hi, My Name is TT! </h1>
 											<p>I am a Strategy Consultant based out of the Silicon Valley</p>
 										</header>
 										<p>Welcome to my website! Here you will find lessons I have learned from several of the consulting engagements I had been put on. On this website, I will also share photos that I took, and think are cool. This website is in progress.. I will work on improving it as time goes on :)</p>
