--- a/generic.html
+++ b/generic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>A Day in the life of a Strategy Consultant</title>
+		<title>Consulting and More</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -35,7 +35,7 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>A Day in the Life of a Strategy Consultant</h1>
+										<h1>Consulting and More</h1>
 									</header>
 
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
@@ -93,32 +93,14 @@ I enjoy taking photos. Please see the photo collection. More content to be uploa
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
+										<li><a href="generic.html">A Day in my Life</a></li>
+										<li><a href="elements.html">Articles</a></li>
 										<li>
-											<span class="opener">Submenu</span>
+											<span class="opener">Articles</span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
-										<li>
-											<span class="opener">Another Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
-									</ul>
+												<li><a href="#">Consulting</a></li>
+												<li><a href="#">Life, Travel, and Purpose</a></li>
+												<li><a href="#">Productivity</a></li>
 								</nav>
 
 							<!-- Section -->
