--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Consulting & More</strong> by Thomas</a>
+									<a href="homepage.html" class="logo"><strong>Consulting & More</strong> by Thomas</a>
 									<ul class="icons">
 										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -166,7 +166,7 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Homepage</a></li>
+										<li><a href="homepage.html">Homepage</a></li>
 										<li>
 											<span class="opener">Content</span>
 											<ul>
