--- a/homepage.html
+++ b/homepage.html
@@ -94,7 +94,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href=""><img src="images/pic01.jpg" alt="" /></a>
+											<a href="#"><img src="images/pic01.jpg" alt="" /></a>
 											<h3>Photography</h3>
 											<p>Check out my Flickr Account: https://www.flickr.com/photos/141313607@N08/</p>
 											<ul class="actions">
