--- a/IT Asset Management.html
+++ b/IT Asset Management.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="homepage.html" class="logo"><strong>Consulting</strong> by TT</a>
+									<a href="index.html" class="logo"><strong>Consulting</strong> by TT</a>
 									<ul class="icons">
 									</ul>
 								</header>
@@ -128,7 +128,7 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="homepage.html">Homepage</a></li>
+										<li><a href="index.html">Homepage</a></li>
 
 										<li>
 											<span class="opener">Content</span>
