--- a/Find the Purpose of Life.html
+++ b/Find the Purpose of Life.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Consulting Archive</title>
+		<title>Finding the Purpose of Life</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Consulting</strong> by TT</a>
+									<a href="index.html" class="logo"><strong>Finding the Purpose of Life</strong> by TT</a>
 									<ul class="icons">
 									</ul>
 								</header>
@@ -30,13 +30,16 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Welcome to my Archive</h1>
+										<h1>Notes on how I Stumbled into my Purpose in Life (For Now)</h1>
 									</header>
-									<div class="row">
-											<div class="col-6 col-12-small">
-											<ul>
-												<li><a href="IT Asset Management.html">Management Consulting for Solving Organizational ITAM - Friday, 11/2/2018</a></li>
+									<hr class="major" />
 
+									<h2>The Intro</h2>
+									<p>A few years ago, I attended a motivational seminar on the purpose of life, presented by Nick Vujicic, a man with no arms and no legs, with a good friend of mine, Pavan Nayak. This was right after a terrible bike accident I had, which in many ways, had been a rude awakening to the fragility of life, and the need to make the most out the time we have. So the purpose of life, according to Nick Vujicic, was something related to Christianity, and remaining faithful to the religion. This was something I couldn’t relate to myself, however I realized there that I could not have someone tell me the purpose of life, I would have to go find it myself.</p>
+
+									
+
+								
 								</section>
 
 						</div>
@@ -60,11 +63,12 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
+
 										<li>
 											<span class="opener">Content</span>
 											<ul>
 												<li><a href="Consulting.html">Consulting</a></li>
-												<li><a href="Articles.html">Articles</a></li>
+												<li><a href="articles.html">Articles</a></li>
 												<li><a href="#">Productivity</a></li>
 								</nav>
 
