--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 											<span class="opener">Content</span>
 											<ul>
 												<li><a href="Consulting.html">Consulting</a></li>
-												<li><a href="#">Articles</a></li>
+												<li><a href="Articles.html">Articles</a></li>
 												<li><a href="#">Productivity</a></li>
 								</nav>
 
