--- a/Articles.html
+++ b/Articles.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Consulting Archive</title>
+		<title>Thoughts & Opinions</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Consulting</strong> by TT</a>
+									<a href="index.html" class="logo"><strong>Articles</strong> by TT</a>
 									<ul class="icons">
 									</ul>
 								</header>
@@ -30,12 +30,12 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Welcome to my Archive</h1>
+										<h1>Archive of Thoughts & Opinions</h1>
 									</header>
 									<div class="row">
 											<div class="col-6 col-12-small">
 											<ul>
-												<li><a href="IT Asset Management.html">Management Consulting for Solving Organizational ITAM - Friday, 11/2/2018</a></li>
+												<li><a href="Find the Purpose of Life.html">Find the Purpose of Life - Friday, 11/2/2018</a></li>
 
 								</section>
 
@@ -64,7 +64,7 @@
 											<span class="opener">Content</span>
 											<ul>
 												<li><a href="Consulting.html">Consulting</a></li>
-												<li><a href="Articles.html">Articles</a></li>
+												<li><a href="articles.html">Articles</a></li>
 												<li><a href="#">Productivity</a></li>
 								</nav>
 
