--- a/Articles.html
+++ b/Articles.html
@@ -35,7 +35,7 @@
 									<div class="row">
 											<div class="col-6 col-12-small">
 											<ul>
-												<li><a href="Find the Purpose of Life.html">Find the Purpose of Life - 11/2/2018</a></li>
+												<li><a href="Find the Purpose of Life.html">Find the Purpose of Life - Friday, 11/2/2018</a></li>
 
 								</section>
 
