--- a/Consulting.html
+++ b/Consulting.html
@@ -35,7 +35,7 @@
 									<div class="row">
 											<div class="col-6 col-12-small">
 											<ul>
-												<li><a href="IT Asset Management.html">Management Consulting for Solving Organizational ITAM - 11/2/2018</a></li>
+												<li><a href="IT Asset Management.html">Hacking Organizational ITAM - Friday, 11/2/2018</a></li>
 
 								</section>
 
