--- a/Articles.html
+++ b/Articles.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Thoughts & Opinions</title>
+		<title>An Archive of my Thoughts & Opinions</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -33,9 +33,9 @@
 										<h1>Archive of Thoughts & Opinions</h1>
 									</header>
 									<div class="row">
-											<div class="col-6 col-12-small">
+											<div class="col- 12 col-12-small">
 											<ul>
-												<li><a href="Find the Purpose of Life.html">Find the Purpose of Life - Friday, 11/2/2018</a></li>
+												<li><a href="Find the Purpose of Life.html">Struggling with Purpose- Friday, 11/2/2018</a></li>
 
 								</section>
 
