--- a/Find the Purpose of Life.html
+++ b/Find the Purpose of Life.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Finding the Purpose of Life</title>
+		<title>Struggling with Purpose</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Finding the Purpose of Life</strong> by TT</a>
+									<a href="index.html" class="logo"><strong>Strugglign with Purpose</strong> by TT</a>
 									<ul class="icons">
 									</ul>
 								</header>
