--- a/What do Management Consultants do.html
+++ b/What do Management Consultants do.html
@@ -30,18 +30,14 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Improving IT Asset Management</h1>
+										<h1>Answering the that Question Friends & Family always ask: What do you do again?</h1>
 									</header>
 									<hr class="major" />
 
-									<h2>Sample Case</h2>
-									<p>A multi billion dollar company is hit with several Software audit fines throughout the year. After paying millions of dollars in response to fees & settlements, the organization is now ready to invest in improved IT Asset Management (ITAM) processes. The oCIO/CISO is also discovering that the organization does not have a single source of truth for obtaining the license position for its hardware and software assets, impacting the business's ability to make well informed IT asset demand forecasting & budgeting decisions. </p>
-									<p>Draft a business plan with risks and assumptions called out for what you would suggest to identify pain points in the organization's existing ITAM processes & controls. Also create sample reccomendations.</p>
-									
-									<hr class="major" />
+									<h2>Management Consulting, in a nutshell</h2>
+									<p>Think of what Mechanics are for. Your car breaks down, or you notice something seems off, or you want to made modifications to the car. Rather than doing the work yourself, because maybe you do not know how, or don’t have the time to invest/learn, you bring it to a mechanic to diagnose, treat, and fix your issues, or make enhancements to your vehicle. They then charge you for labor and parts. </p>
 
-									<h2>Let's Define IT Asset Management, and <strong>WHY</strong> it is Important</h2>
-									<p>All organizations using software, or hardware generally have processes in place for tracking IT Assets purchases, and deployment. A license position is what defined as the number of licenses a company has purchased for a software/hardware product, compared to the total number of deployments (actual number of IT Assets in the organization's environment).</p>
+									<h2>Step 1: Define IT Asset Management, and <strong>WHY</strong> it is Important</h2>
 									<p>IT Asset Management (ITAM) is how an organization monitors and tracks hardware & software purchases, for the purpose of understanding the total IT estate to help with allocating budget for forecasting additional hardware & software purchases in the coming year. ITAM is an umbrella of an organization’s Hardware Asset Management (HAM) and Software Asset Management (SAM). </p>
 									<p>Knowing where IT assets are located, and how they are allocated throughout the organization is fundamental in management’s decisions for expanding the organization’s IT estate. Furthermore, having a firm ITAM understanding is essential for stakeholders of multiple groups throughout an organization, when responding to Software Audit Requests. Google Nike & Quest Audit, for a good example of what happens when sufficient ITAM measures are not in place. Lastly, improved tracking of IT Assets will mitigate Cyber Risk implications. Think of it this way, if an organization has poor ITAM tracking mechanisms, more specifically, if the organization has no idea where all of their hardware assets lie throughout the organization, then this increases the chance of having hardware with confidential client data getting into the hands of third-party perpetrators. <p>
 								
@@ -135,9 +131,9 @@
 										<li>
 											<span class="opener">Content</span>
 											<ul>
-												<li><a href="Consulting.html">Consulting</a></li>
-												<li><a href="Articles.html">Articles</a></li>
-												<li><a href="Productivity.html">Productivity</a></li>
+												<li><a href="#">Consulting</a></li>
+												<li><a href="#">Articles</a></li>
+												<li><a href="#">Productivity</a></li>
 								</nav>
 
 		<!-- Scripts -->
