--- a/Consulting.html
+++ b/Consulting.html
@@ -35,6 +35,7 @@
 									<div class="row">
 											<div class="col-12 col-12-small">
 											<ul>
+												<li><a href="What do Management Consultants do.html">What do Consultants Actually do? - Tuesday, 11/6/2018</a></li>
 												<li><a href="IT Asset Management.html">Hacking Organizational ITAM - Friday, 11/2/2018</a></li>
 
 								</section>
