--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 										</header>
 										<p>Welcome to my website! Here you will find lessons I have learned from several of the consulting engagements I had been put on. On this website, I will also share photos that I took, and think are cool. This website is in progress.. I will work on improving it as time goes on :)</p>
 										<ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
+											<li><a href="https://www.linkedin.com/in/ttran3" class="button big">Let's Connect!</a></li>
 										</ul>
 									</div>
 									<span class="image object">
@@ -95,7 +95,7 @@
 									<div class="posts">
 										<article>
 											<h3>Photography</h3>
-										<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="https://vsco.co/thomas-hei-tran/images/1" class="image"><img src="images/pic01.jpg" alt="" /></a>
 										</article>
 										
 								</section>
